# noisy-chan

./: .gitignore  Cargo.toml  README.md
docs/: noise_deep_dive.odp
src/: main.rs  types.rs  utils.rs
src/channel/: alice.rs  bob.rs  common.rs  mod.rs
